# openinput-rust

./: Cargo.toml
src/: dispatch.rs  keyboard.rs  lib.rs
