[package]
name = "openinput-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dekanova LLC, mriise<me@mriise.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usbd-hid = "0.6.1"
usb-device = "0.2.9"
heapless = "0.7.16"

[dev-dependencies]
hex = "0.4.3"

[features]
dispatch = []
default = ["dispatch"]